# device-transport

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: device_transportConfig.cmake.in
include/core/: byte_codec.hpp  byte_codec_core.hpp  error.hpp
include/serial_port/: serial_port.hpp  trace.hpp
include/serial_port/xbee/: constants.hpp  frames.hpp  parameters.hpp  protocol.hpp  xbee.hpp
include/xbee/: constants.hpp  frames.hpp  parameters.hpp  protocol.hpp
include/xbee/desktop/: xbee.hpp
include/xbee/embedded/: xbee.hpp
include/xbee/qt/: qxbee.hpp
src/serial_port/: serial_port.cpp
src/serial_port/unix/: serial_port.cpp
src/serial_port/windows/: serial_port.cpp
src/serial_port/xbee/: xbee.cpp
src/xbee/desktop/: xbee.cpp
src/xbee/qt/: qxbee.cpp
